--- a/sass/columns/_variables.scss
+++ b/sass/columns/_variables.scss
@@ -1,5 +1,5 @@
 $columns-name: 'cols' !default;
-$columns-class: unquote('.')#{$columns-name} !default;
+$columns-class: unquote("#{unquote(".")}#{$columns-name}") !default;
 $columns-width: auto !default;
 $columns-phone-gutter: 8px !default;
 $columns-tablet-gutter: 16px !default;
