--- a/sass/grid/_variables.scss
+++ b/sass/grid/_variables.scss
@@ -2,19 +2,19 @@ $grid-columns: 12 !default;
 $grid-phone-columns: 4 !default;
 $grid-tablet-columns: 8 !default;
 $grid-name: 'grid' !default;
-$grid-class: unquote('.')#{$grid-name} !default;
+$grid-class: unquote("#{unquote(".")}#{$grid-name}") !default;
 $grid-row-name: #{$grid-name}__row !default;
-$grid-row-class: unquote('.')#{$grid-row-name} !default;
+$grid-row-class: unquote("#{unquote(".")}#{$grid-row-name}") !default;
 $grid-phone-gutter: 8px !default;
 $grid-tablet-gutter: 16px !default;
 $grid-desktop-gutter: 24px !default;
 $float-grid-row-name: #{$grid-name}__fl-row !default;
-$float-grid-row-class: unquote('.')#{$float-grid-row-name} !default;
+$float-grid-row-class: unquote("#{unquote(".")}#{$float-grid-row-name}") !default;
 $grid-col-name: #{$grid-name}__col !default;
-$grid-col-class: unquote('.')#{$grid-col-name} !default;
+$grid-col-class: unquote("#{unquote(".")}#{$grid-col-name}") !default;
 $float-grid-col-name: #{$grid-name}__fl-col !default;
-$float-grid-col-class: unquote('.')#{$float-grid-col-name} !default;
+$float-grid-col-class: unquote("#{unquote(".")}#{$float-grid-col-name}") !default;
 $grid-body-name: #{$grid-name}__body !default;
-$grid-body-class: unquote('.')#{$grid-body-name} !default;
+$grid-body-class: unquote("#{unquote(".")}#{$grid-body-name}") !default;
 $float-grid-body-name: #{$grid-name}__fl-body !default;
-$float-grid-body-class: unquote('.')#{$float-grid-body-name} !default;
+$float-grid-body-class: unquote("#{unquote(".")}#{$float-grid-body-name}") !default;
