--- a/sass/curls.scss
+++ b/sass/curls.scss
@@ -32,8 +32,8 @@
 /** Modal (.modal) **/
 @import 'ui/modal/index';
 
-/** Navbar (.navbar) **/
-@import 'ui/nav/bar/index';
+/** Dropdown (.dropdown) **/
+@import 'ui/nav/dropdown/index';
 
 /** Navbar (.navbar) **/
-@import 'ui/nav/dropdown/index';
+@import 'ui/nav/bar/index';
