--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,7 +2,7 @@
 $MAX-Z-INDEX: 2147483647;
 $MAX-PX: 134217727px;
 $body-alignment: center !default;
-$body-background: #ececec !default;
+$body-background: #f2f2f2 !default;
 
 $body-font: "Roboto", "Helvetica Neue", Arial, sans-serif !default;
 $body-font-size: 16px !default;
