--- a/sass/ui/form/_layout.scss
+++ b/sass/ui/form/_layout.scss
@@ -68,18 +68,17 @@ input[type=search] {
   @extend %#{$flex-name}--y-stretch;
   @extend %#{$flex-name}--x-center;
   position: relative;
-  width: 100%;
   input {
     @extend %#{$flex-name}--fluid;
   }
   & > * {
     @extend %#{$flex-name}--fixed;
   }
-  & > *:first-child {
+  & > *:first-child:not(:last-child) {
     border-top-right-radius: 0 !important;
     border-bottom-right-radius: 0 !important;
   }
-  & > *:last-child {
+  & > *:last-child:not(:first-child) {
     border-left: 0 !important;
     border-top-left-radius: 0 !important;
     border-bottom-left-radius: 0 !important;
