--- a/sass/grid/_mixins.scss
+++ b/sass/grid/_mixins.scss
@@ -23,7 +23,7 @@
   }
   $width: percentage($width);
   width: $width;
-  max-width: $width;
+  // max-width: $width;
   padding: 0 $gutter-size / 2;
   @include flex-basis($width);
 }
