--- a/sass/grid/_variables.scss
+++ b/sass/grid/_variables.scss
@@ -3,16 +3,16 @@ $grid-phone-columns: 4 !default;
 $grid-tablet-columns: 8 !default;
 $grid-name: 'grid' !default;
 $grid-class: unquote("#{unquote(".")}#{$grid-name}") !default;
-$grid-row-name: #{$grid-name}__row !default;
+$grid-row-name: row !default;
 $grid-row-class: unquote("#{unquote(".")}#{$grid-row-name}") !default;
 $grid-phone-gutter: 8px !default;
 $grid-tablet-gutter: 16px !default;
-$grid-desktop-gutter: 24px !default;
-$float-grid-row-name: #{$grid-name}__fl-row !default;
+$grid-desktop-gutter: 16px !default;
+$float-grid-row-name: fl-row !default;
 $float-grid-row-class: unquote("#{unquote(".")}#{$float-grid-row-name}") !default;
-$grid-col-name: #{$grid-name}__col !default;
+$grid-col-name: col !default;
 $grid-col-class: unquote("#{unquote(".")}#{$grid-col-name}") !default;
-$float-grid-col-name: #{$grid-name}__fl-col !default;
+$float-grid-col-name: fl-col !default;
 $float-grid-col-class: unquote("#{unquote(".")}#{$float-grid-col-name}") !default;
 $grid-body-name: #{$grid-name}__body !default;
 $grid-body-class: unquote("#{unquote(".")}#{$grid-body-name}") !default;
