--- a/sass/ui/nav/bar/_layout.scss
+++ b/sass/ui/nav/bar/_layout.scss
@@ -9,14 +9,6 @@
   width: $navbar-width;
   @include flex-wrap(nowrap);
 
-  @media #{$phone} {
-    padding: 0 $grid-phone-gutter;
-  }
-
-  @media #{$tablet} {
-    padding: 0 $grid-tablet-gutter;
-  }
-
   &#{$grid-class}--nopad {
     padding: 0
   }
@@ -114,11 +106,11 @@
 ul#{$navbar-class} li a,
 #{$navbar-class} > a,
 h1, h2, h3, h4, h5, h6,
-.typo--h1, .typo--h2, .typo--h3, .typo--h4, .typo--h5, .typo--h6 {
+.type--h1, .type--h2, .type--h3, .type--h4, .type--h5, .type--h6 {
   @extend %#{$flex-name};
   @extend %#{$flex-name}--self-y-stretch;
   @extend %#{$flex-name}--y-center;
-  padding: 16px;
+  @extend %media-gutters;
   font-weight: 400;
 }
 
