--- a/sass/ui/nav/paginate/_variables.scss
+++ b/sass/ui/nav/paginate/_variables.scss
@@ -1,3 +1,19 @@
 $paginate-name: 'paginate' !default;
 $paginate-class: unquote("#{unquote(".")}#{$paginate-name}") !default;
+$paginate-font-size: 18px !default;
+$paginate-line-height: 1.0em !default;
+$paginate-font-weight: 300;
+
+$paginate-link-color: $link-color !default;
+$paginate-link-hover-color: $link-hover-color !default;
 $paginate-link-class: unquote("#{unquote(".")}#{$paginate-name}__link") !default;
+$paginate-link-border-width: 1px !default;
+$paginate-link-border-style: solid !default;
+$paginate-link-border-color: #ccc !default;
+$paginate-link-background: transparent !default;
+$paginate-link-border-radius: 5px !default;
+$paginate-link-padding: round($grid-desktop-gutter / 2) rgolden($grid-desktop-gutter) !default;
+$paginate-link-color: $link-color !default;
+$paginate-link-hover-color: $link-hover-color !default;
+$paginate-link-active-color: $link-active-color !default;
+$paginate-link-disabled-color: #bbb !default;
